--- a/chinese.html
+++ b/chinese.html
@@ -207,7 +207,7 @@ nav a:hover{
          <!-- Add more menu items as needed -->
     </div>
        
-     <button ><a href="temp.html">Go Back</a></button>
+     <button ><a href="index.html">Go Back</a></button>
 
      <footer>
         <p>&copy; 2023 My Restaurant</p>
