--- a/chinese.html
+++ b/chinese.html
@@ -116,7 +116,7 @@ nav a:hover{
         </div>
         <nav>
             <ul>
-                <li><a href="temp.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
