--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ footer {
             </a>
         </div>
         <div class="card">
-            <a href="chinese.html">
+            <a href="fastfood.html">
                 <img src="https://static.toiimg.com/photo/95665037.cms" alt="Reservation Image">
                 <h3>Fast Food</h3>
                 <p>Explore our delicious dishes.</p>
