--- a/fastfood.html
+++ b/fastfood.html
@@ -220,7 +220,7 @@ nav a:hover{
     </div>
        
      <button ><a href="index.html">Go Back</a></button>
-        <button ><a href="index.html">Download</a></button>
+        <button ><a href="pdf24_images_merged.pdf">Download</a></button>
         <button ><a href="index.html">Next</a></button>
 
      <footer>
