--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ footer {
         <br>
         <p>Station Road, Station Road, Ashoknagar - 473331 Near Vivek Takij</p>
         <p>Email: info@myrestaurant.com</p>
-        <p>Phone: 07419590788</p>
+         <p>Phone:<a href="">07419590788</a></p>
     </section>
 
     <footer>
