--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ footer {
 
         <div class="card">
             <a href="juice.html">
-                <img src="" alt="Reservation Image">
+                <img src="https://t3.ftcdn.net/jpg/02/23/47/36/360_F_223473605_QZguR4hczOIkKmoX3YJ9uRYsrmzN5XaM.jpg" alt="Reservation Image">
                 <h3>Juice & Coffee</h3>
                 <p>Explore our delicious dishes.</p>
             </a>
@@ -230,7 +230,7 @@ footer {
         <h2>Contact Us</h2>
         <br>
         <br>
-        <p>Station Road, Station Road, Ashoknagar - 473331 Near Vivek Takij</p>
+        <p><a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road, Ashoknagar - 473331 Near Vivek Takij </a></p>
         <p>Email: info@myrestaurant.com</p>
          <p>Phone:<a href="">07419590788</a></p>
     </section>
