--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ footer {
         <br>
         <p><a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road, Ashoknagar - 473331 Near Vivek Takij </a></p>
         <p>Email: info@myrestaurant.com</p>
-         <p>Phone:<a href="">07419590788</a></p>
+         <p>Phone:<a href="07419590788">07419590788</a></p>
     </section>
 
     <footer>
