--- a/index.html
+++ b/index.html
@@ -185,32 +185,28 @@ footer {
     <section class="cards">
         <div class="card">
             <a href="index.html">
-                <img src="https://www.tastingtable.com/img/gallery/20-delicious-indian-dishes-you-have-to-try-at-least-once/intro-1645057933.webp" alt="Menu Image">
+                <img src="https://www.tastingtable.com/img/gallery/20-delicious-indian-dishes-you-have-to-try-at-least-once/intro-1645057933.webp" alt="Menu Image"> </a>
                 <h3>Indian Food</h3>
                 <p>Explore our delicious dishes.</p>
-            </a>
         </div>
         <div class="card">
             <a href="chinese.html">
-                <img src="https://ik.imagekit.io/awwybhhmo/satellite_images/chinese/beyondmenu/hero/2.jpg?tr=w-3840,q-50" alt="Reservation Image">
+                <img src="https://ik.imagekit.io/awwybhhmo/satellite_images/chinese/beyondmenu/hero/2.jpg?tr=w-3840,q-50" alt="Reservation Image"> </a>
                 <h3>Chinese Food</h3>
                 <p>Explore our delicious dishes.</p>
-            </a>
         </div>
         <div class="card">
             <a href="fastfood.html">
-                <img src="https://static.toiimg.com/photo/95665037.cms" alt="Reservation Image">
+                <img src="https://static.toiimg.com/photo/95665037.cms" alt="Reservation Image">  </a>
                 <h3>Fast Food</h3>
                 <p>Explore our delicious dishes.</p>
-            </a>
         </div>
 
         <div class="card">
             <a href="juice.html">
-                <img src="https://t3.ftcdn.net/jpg/02/23/47/36/360_F_223473605_QZguR4hczOIkKmoX3YJ9uRYsrmzN5XaM.jpg" alt="Reservation Image">
+                <img src="https://t3.ftcdn.net/jpg/02/23/47/36/360_F_223473605_QZguR4hczOIkKmoX3YJ9uRYsrmzN5XaM.jpg" alt="Reservation Image"> </a>
                 <h3>Juice & Coffee</h3>
                 <p>Explore our delicious dishes.</p>
-            </a>
         </div>
     </section>
 
