--- a/juice.html
+++ b/juice.html
@@ -219,9 +219,9 @@ nav a:hover{
          <!-- Add more menu items as needed -->
     </div>
        
-     <button ><a href="index.html">Go Back</a></button>
-        <button ><a href="pdf24_images_merged.pdf">Download</a></button>
-        <button ><a href="index.html">Next</a></button>
+    <a href="index.html"> <button >Go Back</button> </a>
+       <a href="pdf24_images_merged.pdf"> <button >Download </button></a>
+        <a href="index.html"><button >Next</button></a>
 
      <footer>
         </div>
