--- a/juice.html
+++ b/juice.html
@@ -68,15 +68,13 @@ nav a:hover{
         }
 
         button {
-            background-color:#FFD700;
+              background-color:#FFD700;
             color: black;
-            margin-bottom:20px;
-            margin-left: 60px;
-            padding: 10px 20px;
-            border: none;
+            margin:70px 20px 20px 20px;
+            width: 110px;
+            height: 40px;
             cursor: pointer;
-            align-items: center;
-            font-size: 20px;
+            font-size: 15px;
             border-radius: 6px;
             justify-content: space-between;
         }
