--- a/index.html
+++ b/index.html
@@ -222,13 +222,15 @@ footer {
             We are committed to providing impeccable service, with a focus on your comfort and satisfaction. It's our mission to transport you on a culinary journey, leaving you with delightful memories and a longing to return.</p>
     </section>
 
-    <section class="contact" id="contact">
+  <section class="contact" id="contact">
         <h2>Contact Us</h2>
         <br>
         <br>
+        <a href=""><img src="image/pngwing.com (32).png" width="50px" height="50px"></a>
+        <h3>WhatsApp</h3>
         <p><a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road, Ashoknagar - 473331 Near Vivek Takij </a></p>
         <p>Email: info@myrestaurant.com</p>
-         <p>Phone:<a href="07419590788">07419590788</a></p>
+        <p>Phone:<a href="">07419590788</a></p>
     </section>
 
     <footer>
