--- a/index.html
+++ b/index.html
@@ -187,26 +187,26 @@ footer {
             <a href="index.html">
                 <img src="https://www.tastingtable.com/img/gallery/20-delicious-indian-dishes-you-have-to-try-at-least-once/intro-1645057933.webp" alt="Menu Image"> </a>
                 <h3>Indian Food</h3>
-                <p>Explore our delicious dishes.</p>
+               <p>The heritage of India's flavors.</p>
         </div>
         <div class="card">
             <a href="chinese.html">
                 <img src="https://ik.imagekit.io/awwybhhmo/satellite_images/chinese/beyondmenu/hero/2.jpg?tr=w-3840,q-50" alt="Reservation Image"> </a>
                 <h3>Chinese Food</h3>
-                <p>Explore our delicious dishes.</p>
+                <p>I dim sum-thing great today!.</p>
         </div>
         <div class="card">
             <a href="fastfood.html">
                 <img src="https://static.toiimg.com/photo/95665037.cms" alt="Reservation Image">  </a>
                 <h3>Fast Food</h3>
-                <p>Explore our delicious dishes.</p>
+               <p>I don't like to eat snails. I prefer fast food.</p>
         </div>
 
         <div class="card">
             <a href="juice.html">
                 <img src="https://t3.ftcdn.net/jpg/02/23/47/36/360_F_223473605_QZguR4hczOIkKmoX3YJ9uRYsrmzN5XaM.jpg" alt="Reservation Image"> </a>
                 <h3>Juice & Coffee</h3>
-                <p>Explore our delicious dishes.</p>
+                <p>Because crack isn't accepted in the workplace.</p>
         </div>
     </section>
 
