--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ footer {
 
     <section class="cards">
         <div class="card">
-            <a href="indianfood.html">
+            <a href="inidianfood.html">
                 <img src="https://www.tastingtable.com/img/gallery/20-delicious-indian-dishes-you-have-to-try-at-least-once/intro-1645057933.webp" alt="Menu Image"> </a>
                 <h3>Indian Food</h3>
                <p>The heritage of India's flavors.</p>
