--- a/chinese.html
+++ b/chinese.html
@@ -193,7 +193,11 @@ nav a:hover{
          <!-- Add more menu items as needed -->
     </div>
        
-     <button ><a href="index.html">Go Back</a></button>
+       <section class="btn">
+    <a href="index.html"> <button >Go Back</button></a>
+       <a href="pdf24_images_merged.pdf"> <button >Download </button></a>
+        <a href="index.html"><button >Next</button></a>
+        </section>
 
      <footer>
         <p>&copy; 2023 My Restaurant</p>
