--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ footer {
         <h2>Contact Us</h2>
         <br>
         <br>
-        <a href=""><img src="image/pngwing.com (32).png" width="50px" height="50px"></a>
+        <a href=""><img src="pngwing.com (32).png" width="50px" height="50px"></a>
         <h3>WhatsApp</h3>
         <p><a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road, Ashoknagar - 473331 Near Vivek Takij </a></p>
         <p>Email: info@myrestaurant.com</p>
