--- a/chinese.html
+++ b/chinese.html
@@ -182,7 +182,7 @@ nav a:hover{
             </div>
         </div>
 
-        <div class="menu-item" id="item9"
+        <div class="menu-item" id="item9">
             <img src="https://images.squarespace-cdn.com/content/v1/5ec30182cff13b4331c5384d/c14fb1c8-7e2c-4ad3-9561-f3061ccc1e55/11111626-30C4-4406-BA90-168781AACD56.png" alt="Item 2">
             <div>
                 <h2>Schezwan Noodles</h2>
