--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@ footer {
     </header>
 
     <section class="hero">
-        <h1>Welcome to My Restaurant</h1>
+        <h1>Welcome to Our Restaurant</h1>
         <p>Discover a world of delicious flavors.</p>
         <a href="#menu" class="cta-button">View Menu</a>
     </section>
 
     <section class="menu" id="menu">
-        <h2>Recommened</h2>
+        <h2>Recommened Menu</h2>
     </section>
 
     <section class="cards">
