--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ footer {
 
     <footer>
         <p>&copy; 2023 My Restaurant</p>
+        <p>Designed by Yashk</p>
     </footer>
 </body>
 </html>
