--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Restaurant</title>
+    <title>Ambey Fast Food & Bakers</title>
     <style>
         /* Reset some default browser styles */
 body, h1, h2{
@@ -234,7 +234,7 @@ footer {
     </section>
 
     <footer>
-        <p>&copy; 2023 My Restaurant</p>
+        <p>&copy; 2023 Ambey Fast Food & Baker's</p>
         <p>Designed by Yashk</p>
     </footer>
 </body>
