--- a/index.html
+++ b/index.html
@@ -156,6 +156,55 @@ footer {
     }
 }
 
+.container {
+    max-width: auto;
+    margin: 70px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);*/
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 27px;
+}
+
+form label {
+    text-align: center;
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+form input[type="text"],
+form input[type="email"],
+form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+form button {
+    background-color:#FFD700 /*#007BFF*/;
+    color: black;
+    border: none;
+    font-size: 15px;
+    padding: 10px 20px;
+    margin-left: 72px;
+    margin-top: 50px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #FFDF00;
+}
+
     </style>
 </head>
 <body>
@@ -222,6 +271,25 @@ footer {
             We are committed to providing impeccable service, with a focus on your comfort and satisfaction. It's our mission to transport you on a culinary journey, leaving you with delightful memories and a longing to return.</p>
     </section>
 
+      
+    <div class="container">
+        <h1>Feedback Form</h1>
+        <form id="feedback-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+
+            <label for="message">Feedback:</label>
+            <textarea id="message" rows="4" required></textarea>
+
+            <button type="submit">Submit Feedback</button>
+        </form>
+    </div>
+
+
+    
   <section class="contact" id="contact">
         <h2>Contact Us</h2>
         <br>
