--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ footer {
     }
 }
 
-.container {
+    .container {
     max-width: auto;
     margin: 70px;
     background-color: #fff;
@@ -167,7 +167,8 @@ footer {
 
 h1 {
     text-align: center;
-    font-size: 26px;
+    margin-bottom: 40px;
+    font-size: 27px;
 }
 
 form label {
@@ -181,6 +182,7 @@ form input[type="text"],
 form input[type="email"],
 form textarea {
     width: 100%;
+    padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -191,9 +193,9 @@ form button {
     background-color:#FFD700 /*#007BFF*/;
     color: black;
     border: none;
-    font-size: 14px;
-    padding: 7px 13px;
-    margin-left: 30px;
+    font-size: 15px;
+    padding: 10px 20px;
+    margin-left: 72px;
     margin-top: 50px;
     border-radius: 4px;
     cursor: pointer;
@@ -202,6 +204,7 @@ form button {
 form button:hover {
     background-color: #FFDF00;
 }
+
 
     </style>
 </head>
