--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@ form button:hover {
     <div class="container">
         <h1>Feedback Form</h1>
         <form id="feedback-form">
-            <label for="name">Name:</label>
+            <label for="name">Name</label>
             <input type="text" id="name" required>
 
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <input type="email" id="email" required>
 
-            <label for="message">Feedback:</label>
+            <label for="message">Feedback</label>
             <textarea id="message" rows="4" required></textarea>
 
             <button type="submit">Submit Feedback</button>
