--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@ form label {
     text-align: center;
     display: block;
     font-weight: bold;
-    margin-top: 20px;
-     font-size: 13px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 13px;
 }
 
 form input[type="text"],
