--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ footer {
    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);*/
 }
 
-h1 {
+.container h1 {
     text-align: center;
     font-size: 20px;
 }
