--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ nav a:hover{
 .cta-button {
     display: inline-block;
     background-color: #FFD700;
-    color: #fff;
+    color: black;
     padding: 5px 10px;
     border-radius: 5px;
     text-decoration: none;
