--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@ form button:hover {
     background-color: #FFDF00;
 }
 
+.veg{
+padding: 20px;
+}
 
     </style>
 </head>
@@ -298,12 +301,16 @@ form button:hover {
         <a href=""><img src="pngwing.com (32).png" width="50px" height="50px"></a>
         <h3>WhatsApp</h3>
         <p><a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road, Ashoknagar - 473331 Near Vivek Takij </a></p>
-        <p>Email: info@myrestaurant.com</p>
+        <section class="veg">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Veg_symbol.svg/180px-Veg_symbol.svg.png?20131205102827" width=40px height="40px">
+         </section>
+        <!--p>Email: info@myrestaurant.com</p-->
         <p>Phone:<a href="">07419590788</a></p>
     </section>
 
     <footer>
         <p>&copy; 2023 Ambey Fast Food & Baker's</p>
+         <img src="https://washops.s3.ap-south-1.amazonaws.com/e8313f04a00e0ba330cd68d88430a56c.png" width="60px"> 
         <p>Designed by Yashk</p>
     </footer>
 
