--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ padding: 20px;
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Veg_symbol.svg/180px-Veg_symbol.svg.png?20131205102827" width=40px height="40px">
          </section>
       
-        <p>Address: <a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road, Ashoknagar - 473331 Near Vivek Takij </a></p>
+        <p>Address: <a href="https://maps.app.goo.gl/aabZvTv1mgwS72hx6">Station Road,Near Vivek Takies Ashonagar</a></p>
         <!--p>Email: info@myrestaurant.com</p-->
         <p>Phone: <a href="">07419590788</a></p>
     </section>
