--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@ padding: 2px;
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                 <li><a href="#offer">Offer</a></li>
             </ul>
         </nav>
     </header>
