--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 body, h1, h2{
     margin: 0;
     padding: 0;
-     font-size: 20px;
+    font-size: 20px;
 }
 
 p{
     font-size: 11px;
+
 }
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('');
+    background-repeat:no-repeat;
 }
 
 /* Header styles */
@@ -38,7 +39,7 @@ span{
 }
 
 .logo {
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 nav ul {
@@ -47,7 +48,7 @@ nav ul {
 }
 
 nav li {
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 nav a {
@@ -65,17 +66,17 @@ nav a:hover{
     background-image: url('https://images.pexels.com/photos/326279/pexels-photo-326279.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-size: cover;
     text-align: center;
-    padding: 150px 0;
+    padding: 100px 0;
     color: #fff;
 }
 
 .hero h1 {
-    font-size: 30px;
+    font-size: 40px;
     margin-bottom: 20px;
 }
 
 .hero p {
-     font-size: 20px;
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
@@ -83,24 +84,25 @@ nav a:hover{
     display: inline-block;
     background-color: #FFD700;
     color: black;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 7px 14px;
+    border-radius: 7px;
     text-decoration: none;
     font-weight: bold;
+    box-shadow: #ccc;
 }
 
 /* About, Menu, and Contact section styles */
 .about, .menu, .contact {
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 20px;
     text-align: center;
-    background-color:#FFDF00;
+    background-color:#FFD700;
 }
 
 /* Footer styles */
 footer {
     text-align: center;
-    padding: 20px 0;
+    padding: 10px;
     background-color: #333;
     color: #FFD700;
 }
@@ -113,29 +115,30 @@ footer {
     padding: 70px;
     max-width: 800px;
 }
-
 .card {
     background-color:#FFDF00;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 45%;
-    margin-top: 70px;
-    transition: transform 0.3s;
+    margin-top: 80px;
+    transition: transform 0.2s;
 }
 
 .card:hover {
+    background-color: #FFD700;
+    box-shadow: #ccc 2px 2px 2px;
     transform: scale(1.05);
 }
 
 .card h3 {
-     font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 20px;
+    margin-bottom: 5px;
     color:black;
     text-align: center;
 }
 
 .card p {
-    font-size: 15px;
+    font-size: 14px;
     text-align: center;
     margin-bottom: 10px;
     color: black;
@@ -143,7 +146,7 @@ footer {
 
 .card img {
     max-width: 100%; /* Ensure the image fits within the card */
-    border-radius: 5px; /* Optional: add rounded corners to the image */
+    border-radius: 10px 10px 40px 40px; /* Optional: add rounded corners to the image */
 }
 
 /* Media queries for responsiveness */
@@ -157,12 +160,9 @@ footer {
     }
 }
 
-    .container {
-    max-width: auto;
+.container {
     margin: 70px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
+    background-color:transparent;
    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);*/
 }
 
@@ -184,29 +184,30 @@ form input[type="text"],
 form input[type="email"],
 form textarea {
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 7px;
 }
 
 form button {
     background-color:#FFD700 /*#007BFF*/;
     color: black;
     border: none;
-     font-size: 14px;
-    padding: 10px 20px;
-    margin-left: 72px;
+    font-size:13px;
+    padding: 8px 10px;
     margin-top: 50px;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 form button:hover {
     background-color: #FFDF00;
+    box-shadow: #ccc 1px 1px 2px;
 }
 
 .veg{
-padding: 2px;
+padding: 20px;
 }
 
     </style>
