--- a/juice.html
+++ b/juice.html
@@ -206,7 +206,7 @@ nav a:hover{
 
     <section class="btn">
     <a href="index.html"> <button >Go Back</button></a>
-       <a href="pdf24_images_merged.pdf"> <button >Download Menu</button></a>
+       <a href="pdf24_images_merged.pdf"> <button >Download</button></a>
         <a href="index.html"><button >Next</button></a>
         </section>
      <footer>
