--- a/juice.html
+++ b/juice.html
@@ -58,6 +58,7 @@ nav a:hover{
             align-items: center;
             color: black;
             font-size: 13px;
+            text-align: right;
         }
 
         .menu-item img {
