--- a/chinese.html
+++ b/chinese.html
@@ -57,7 +57,8 @@ nav a:hover{
             justify-content: space-between;
             align-items: center;
             color: black;
-            font-size: 13px;
+            font-size: 10px;
+            text-align: right;
         }
 
         .menu-item img {
