--- a/inidianfood.html
+++ b/inidianfood.html
@@ -12,16 +12,15 @@
             padding: 0;
         }
 
-       {
-    font-size: 13px;
-    background-color: black;
+ header {
+    font-size: 12px;
+    background-color:black;
     color: #FFD700;
     padding: 5px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
  span{
     color:white;
  }
