--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>Ambey Fast Food & Bakers</title>
     <style>
         /* Reset some default browser styles */
-body, h1, h2{
+body{
     margin: 0;
     padding: 0;
     font-size: 20px;
 }
-
+h1{
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+h2{
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+        
 p{
     font-size: 11px;
 
