--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@ footer {
 
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
+
+body{
+    margin: 0;
+    padding: 0;
+}
+h1{
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+}
+h2{
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+}
     .cards {
         flex-direction: column;
     }
