--- a/chinese.html
+++ b/chinese.html
@@ -27,7 +27,7 @@
  }
 
 .logo {
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 nav ul {
@@ -51,6 +51,7 @@ nav a:hover{
 
         .menu-item {
             border: 1px solid #ccc;
+            border-radius: 10px;
             padding: 20px;
             margin: 20px;
             display: flex;
