--- a/chinese.html
+++ b/chinese.html
@@ -64,7 +64,7 @@ nav a:hover{
 
         .menu-item img {
             max-width: 100px;
-            height: auto;
+            height: 80px;
             margin-right: 20px;
             border-radius: 10px;
         }
