--- a/juice.html
+++ b/juice.html
@@ -22,14 +22,16 @@
     align-items: center;
 }
 
+h1{
+    font-size: 20px;
+}
  span{
     color:white;
  }
 
 .logo {
-    margin-left: 20px;
+    margin-left: 5px;
 }
-
 nav ul {
     list-style: none;
     display: flex;
@@ -63,7 +65,7 @@ nav a:hover{
 
         .menu-item img {
             max-width: 100px;
-            height: auto;
+            height: 80px;
             margin-right: 20px;
             border-radius: 10px;
         }
