--- a/juice.html
+++ b/juice.html
@@ -53,6 +53,7 @@ nav a:hover{
 
         .menu-item {
             border: 1px solid #ccc;
+            border-radius: 10px;
             padding: 20px;
             margin: 20px;
             display: flex;
