--- a/inidianfood.html
+++ b/inidianfood.html
@@ -21,12 +21,17 @@
     justify-content: space-between;
     align-items: center;
 }
+
+h1{
+    font-size: 20px;
+}
+        
  span{
     color:white;
  }
 
 .logo {
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 nav ul {
@@ -50,6 +55,7 @@ nav a:hover{
 
         .menu-item {
             border: 1px solid #ccc;
+            border-radius: 10px;
             padding: 20px;
             margin: 20px;
             display: flex;
@@ -62,7 +68,7 @@ nav a:hover{
 
         .menu-item img {
             max-width: 100px;
-            height: auto;
+             height: 80px;
             margin-right: 20px;
             border-radius: 10px;
         }
