--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ footer {
 form label {
     text-align: center;
     display: block;
-    font-weight: bold;
+    /*font-weight: bold;*/
     margin-top: 40px;
     margin-bottom: 20px;
     font-size: 13px;
@@ -225,7 +225,7 @@ form button {
     margin-top: 50px;
     border-radius: 10px;
     cursor: pointer;
-    font-weight: bold;
+   /* font-weight: bold; */
 }
 
 form button:hover {
@@ -318,7 +318,7 @@ padding: 20px;
             <label for="message">Feedback</label>
             <textarea id="message" rows="4" required></textarea>
 
-            <button type="submit">Submit Feedback</button>
+            <button type="submit">Submit</button>
         </form>
     </div>
 
