--- a/fastfood.html
+++ b/fastfood.html
@@ -217,8 +217,8 @@ nav a:hover{
     </section>
     
      <footer>
-        </div>
-        <p>&copy; 2023 My Restaurant</p>
+           <p>&copy; 2023 Ambey Fast Food & Baker's</p>
+        <p>Designed by Yashk</p>
     </footer>
 </body>
 </html>
